--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
             </a>
         </div>
     </nav>
+    <nav class="res-navbar">
+        <div class="res-menu">
+            <a href="./pages/reservation.html" class="btn-menu">Reservation</a>
+            <a href="./pages/portfolio.html" class="btn-menu">Portfolio</a>
+            <a href="./pages/contact.html" class="btn-menu">Our Team</a>
+        </div>
+    </nav>
 
     <!-- Main -->
     <div class="main">
@@ -79,10 +86,8 @@
             <div class="about-title">About Us</div>
             <div class="about-content">
                 <img src="./images/dev.jpeg" class="dev" alt="" srcset="">
-                <div class="about-text"><caption class="caption">The Founder</caption><br>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi repellendus assumenda suscipit quisquam incidunt, ratione commodi laboriosam ullam nihil provident, soluta rem, animi culpa asperiores nam exercitationem nisi. Nulla, cum!Lorem
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente doloribus nihil optio totam dicta pariatur explicabo ex et ipsum eveniet ipsam necessitatibus accusantium voluptatem officia modi blanditiis, tempore aut fugiat.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci culpa consectetur exercitationem fugiat nihil soluta provident repellendus ad placeat, rem a recusandae ex tenetur nesciunt quae! Ab dolorum saepe similique?
+                <br><div class="about-text"><caption class="caption">The Founder</caption><br><br>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi repellendus assumenda suscipit quisquam incidunt, ratione commodi laboriosam ullam nihil provident, soluta rem, animi culpa asperiores nam exercitationem nisi. Nulla, cum!Lorem.
                 </div>
             </div>
         </div>
