--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -33,6 +33,14 @@
         </div>
     </nav>
 
+  <nav class="res-navbar">
+      <div class="res-menu">
+          <a href="./reservation.html" class="btn-menu">Reservation</a>
+          <a href="./portfolio.html" class="btn-menu">Portfolio</a>
+          <a href="./contact.html" class="btn-menu">Our Team</a>
+      </div>
+  </nav>
+
     <!--<main>-->
         <div id="container">
             <h1>Make Your Appointment Rezervation</h1>
